@@ -6,17 +6,17 @@ package view; /**
  * Window>Preferences>Java>Code Generation.
  */
 
+import entity.Bowler;
 import entity.Lane;
+import entity.Party;
 import entity.Pinsetter;
-import events.GameEvent;
-import events.LaneEvent;
-import events.PinsetterEvent;
 import observer.GameObserver;
 import observer.LaneObserver;
 import observer.PinsetterObserver;
 
 import java.awt.*;
 import java.awt.event.*;
+import java.util.HashMap;
 import javax.swing.*;
 
 public class LaneStatusView implements ActionListener, LaneObserver, GameObserver, PinsetterObserver {
@@ -125,13 +125,14 @@ public class LaneStatusView implements ActionListener, LaneObserver, GameObserve
 		}
 	}
 
-		public void receiveLaneEvent(LaneEvent le) {
-			if ( le.isMechanicalProblem() ) {
-				maintenance.setBackground( Color.RED );
-			}
+	public void receiveLaneEvent(boolean mechProb) {
+		if ( mechProb ) {
+			maintenance.setBackground( Color.RED );
 		}
-	public void receiveGameEvent(GameEvent ge) {
-		curBowler.setText( ge.getBowler().getNickName() );
+	}
+
+	public void receiveGameEvent(Party p, int bI, Bowler cT, int[][] cS, HashMap scores, int frameNum, int[] curScores, int ball) {
+		curBowler.setText( ( (Bowler)cT).getNickName() );
 		if ( lane.getGame().getParty() == null ) {
 			viewLane.setEnabled( false );
 			viewPinSetter.setEnabled( false );
@@ -141,8 +142,9 @@ public class LaneStatusView implements ActionListener, LaneObserver, GameObserve
 		}
 	}
 
-	public void receivePinsetterEvent(PinsetterEvent pe) {
-		pinsDown.setText( (Integer.valueOf(pe.totalPinsDown())).toString() );
+
+	public void receivePinsetterEvent(boolean pins[], boolean foul, int throwNumber, int jdpins, int totalPinsDown) {
+		pinsDown.setText( ( new Integer(totalPinsDown) ).toString() );
 	}
 
 }
